kubernetes-config/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /notes
            pathType: Prefix
            backend:
              service:
                name: note-service
                port:
                  number: 80
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 80
